# apituringserver/controller/admin.go
@@ -28,12 +28,13 @@ func NewAdminController(adminService service.AdminService) AdminController {
 // BanUser godoc
 // @Title BanUser
 // @Description  Admin ban user for X time.
+// @Param Authorization header string true "Token acces admin"
 // @Param id path string true "ID from query"
 // @Tags Admin
 // @Success      200 {object} helper.Response
 // @Failure      400 body is empty or missing param
 // @Failure      500 "internal server error"
-// @Router       /api/admin/ban/{id} [post]
+// @Router       /api/admin/ban/{id} [put]
 func (c *adminController) BanUser(ctx *gin.Context) {
 	userID := ctx.Param("id")
 
@@ -47,12 +48,13 @@ func (c *adminController) BanUser(ctx *gin.Context) {
 // UnbanUser godoc
 // @Title UnbanUser
 // @Description  Admin unban user.
+// @Param Authorization header string true "Token acces admin"
 // @Param id path string true "ID from query"
 // @Tags Admin
 // @Success      200 {object} helper.Response
 // @Failure      400 body is empty or missing param
 // @Failure      500 "internal server error"
-// @Router       /api/admin/unban/{id} [post]
+// @Router       /api/admin/unban/{id} [put]
 func (c *adminController) UnbanUser(ctx *gin.Context) {
 	userID := ctx.Param("id")
 
@@ -66,6 +68,7 @@ func (c *adminController) UnbanUser(ctx *gin.Context) {
 // NewFeature godoc
 // @Title NewFeature
 // @Description  Admin add new feature to show in version of game info.
+// @Param Authorization header string true "Token acces admin"
 // @Param request body dto.FeatureDTO true "Body to write new features"
 // @Tags Admin
 // @Success      200 {object} helper.Response
